--- a/recipes/cheesy-taco-burgers.html
+++ b/recipes/cheesy-taco-burgers.html
@@ -3,36 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Cheesy taco burgers</title>
 </head>
 <body>
-    <h1>Mozzarella sticks</h1>
+    <h1>Cheesy taco burgers</h1>
 
-    <img src="https://www.allrecipes.com/thmb/ZiFhHliWVbS_T9hhw-Fc3GLJVNU=/0x512/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/23596-fried-mozzarella-cheese-sticks-DDMFS-4x3-842a0eaebf6b435a8d3a8b04325e13eb.jpg" width="250">
-    <h2>Golden fingers of God</h2>
+    <img src="https://www.allrecipes.com/thmb/WkO1yOuYS9AG5HpIG_iY1U4AubE=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/7913764-302e7457f8ef473da0cf63eeaaa7d07a.jpg" width="250">
+    <h2>A Wonka-like creation</h2>
 
-    <p>Come correct: bring cheese, bread crumbs, and oil!</p>
+    <p>Taco night meats the drive-thru!</p>
 
     <h3>Ingredients</h3>
 
     <ul>
-        <li>2 large eggs, beaten</li>
-        <li>¼ cup water</li>
-        <li>½ teaspoon garlic salt</li>
-        <li>⅔ cup all-purpose flour</li>
-        <li>⅓ cup cornstarch</li>
-        <li>2 cups oil</li>
-        <li>1 package mozzarella cheese sticks</li>
+        <li>1 pound ground beef</li>
+        <li>1 (1 ounce) package taco seasoning</li>
+        <li>3 thick slices Cheddar cheese</li>
+        <li>3 hamburger buns, split</li>
     </ul>
 
     <h3>Steps</h3>
 
     <ol>
-        <li>Whisk water and eggs together in a bowl. Mix bread crumbs and garlic salt in seperate bowl.</li>
-        <li>Blend flour and cornstarch together in a third bowl.</li>
-        <li>Heat oil to 365 degrees F (185 degrees C) in a large, heavy saucepan.</li>
-        <li>Dredge a mozzarella stick in flour. Press into bread crumbs to coat. Place breaded mozzarella stick on a plate or wire rack</li>
-        <li>Use a spider spoon or a pair of tongs to lower 3 to 4 mozzarella sticks into the hot oil. Fry until golden brown, about 30 seconds</li>
+        <li>Mix ground beef and taco seasoning together in a bowl. Set in the refrigerator for 30 minutes to let taco mix infuse into the beef.</li>
+        <li>Preheat an outdoor grill for medium heat and lightly oil the grate.</li>
+        <li>Remove meat from the refrigerator and make 6 very thin patties. Place a slice of Cheddar cheese into the center of 3 patties. Place the remaining patties on top of the cheese patties and seal together by pinching the ends.</li>
+        <li>Cook on the preheated grill for 6 to 7 minutes. Flip and continue cooking until no longer pink, 6 to 7 minutes more. Place on hamburger buns.</li>
     </ol>
     
 </body>
