--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
 <body>
     <h1>Odin Recipes</h1>
 
-    <a href="recipes/pizza.html">Pizza</a>
-    <a href="recipes/mozzarella-sticks.html">Mozzarella sticks</a>
-    <a href="recipes/cheesy-taco-burgers.html">Cheesy taco burgers</a>
-
+    <ul>
+        <li><a href="recipes/pizza.html">Pizza</a></li>
+        <li><a href="recipes/mozzarella-sticks.html">Mozzarella sticks</a></li>
+        <li><a href="recipes/cheesy-taco-burgers.html">Cheesy taco burgers</a></li>
+    </ul>
 </body>
 </html>
