--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin Recipes</title>
-    <link rel="stylesheet" href="solution.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Odin Recipes</h1>
 
     <ul>
-        <li><a href="recipes/pizza.html">Pizza</a></li>
-        <li><a href="recipes/mozzarella-sticks.html">Mozzarella sticks</a></li>
-        <li><a href="recipes/cheesy-taco-burgers.html">Cheesy taco burgers</a></li>
+        <li class="pizza"><a href="recipes/pizza.html">Pizza</a></li>
+        <li class="sticks"><a href="recipes/mozzarella-sticks.html">Mozzarella sticks</a></li>
+        <li class="burger"><a href="recipes/cheesy-taco-burgers.html">Cheesy taco burgers</a></li>
     </ul>
 </body>
 </html>
