--- a/recipes/cheesy-taco-burgers.html
+++ b/recipes/cheesy-taco-burgers.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cheesy taco burgers</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Cheesy taco burgers</h1>
