--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pizza recipe</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
-    <h1>Pizza</h1>
+    <h1 id="pizza">Pizza</h1>
 
     <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F4563133.jpg&q=60&c=sc&poi=auto&orient=true&h=512" width="250">
 
