move img width declaration from html to css

--- a/recipes/mozzarella-sticks.html
+++ b/recipes/mozzarella-sticks.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Mozzarella sticks</h1>
 
-    <img src="https://www.allrecipes.com/thmb/ZiFhHliWVbS_T9hhw-Fc3GLJVNU=/0x512/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/23596-fried-mozzarella-cheese-sticks-DDMFS-4x3-842a0eaebf6b435a8d3a8b04325e13eb.jpg" width="250">
+    <img src="https://www.allrecipes.com/thmb/ZiFhHliWVbS_T9hhw-Fc3GLJVNU=/0x512/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/23596-fried-mozzarella-cheese-sticks-DDMFS-4x3-842a0eaebf6b435a8d3a8b04325e13eb.jpg">
     <h2>Golden fingers of God</h2>
 
     <p>Come correct: bring cheese, bread crumbs, and oil!</p>
