--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -9,7 +9,7 @@
 <body>
     <h1 id="pizza">Pizza</h1>
 
-    <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F4563133.jpg&q=60&c=sc&poi=auto&orient=true&h=512" width="250">
+    <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F4563133.jpg&q=60&c=sc&poi=auto&orient=true&h=512">
 
     <h2>Cheap & homemade, but it's pizza</h2>
 
