center img and color to id selectors

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <h1>Odin Recipes</h1>
 
     <ul>
-        <li class="pizza"><a href="recipes/pizza.html">Pizza</a></li>
-        <li class="sticks"><a href="recipes/mozzarella-sticks.html">Mozzarella sticks</a></li>
-        <li class="burger"><a href="recipes/cheesy-taco-burgers.html">Cheesy taco burgers</a></li>
+        <li id="pizza"><a href="recipes/pizza.html">Pizza</a></li>
+        <li id="sticks"><a href="recipes/mozzarella-sticks.html">Mozzarella sticks</a></li>
+        <li id="burger"><a href="recipes/cheesy-taco-burgers.html">Cheesy taco burgers</a></li>
     </ul>
 </body>
 </html>
