--- a/recipes/cheesy-taco-burgers.html
+++ b/recipes/cheesy-taco-burgers.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../style.css">
 </head>
 <body>
-    <h1>Cheesy taco burgers</h1>
+    <h1 id="burger">Cheesy taco burgers</h1>
 
     <img src="https://www.allrecipes.com/thmb/WkO1yOuYS9AG5HpIG_iY1U4AubE=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/7913764-302e7457f8ef473da0cf63eeaaa7d07a.jpg">
     <h2>A Wonka-like creation</h2>
