--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -7,31 +7,34 @@
     <link rel="stylesheet" href="../style.css">
 </head>
 <body>
-    <h1 id="pizza">Pizza</h1>
+    <div class="recipe-block">
 
-    <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F4563133.jpg&q=60&c=sc&poi=auto&orient=true&h=512">
+        <div class="pizza-title"><h1 id="pizza">Pizza</h1></div>
 
-    <h2>Cheap & homemade, but it's pizza</h2>
+        <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F4563133.jpg&q=60&c=sc&poi=auto&orient=true&h=512">
 
-    <p>You'll need cheese, sauce, and a tortilla. What better way to frustrate Italians!</p>
+        <h2>Cheap & homemade, but it's pizza</h2>
 
-    <h3>Ingredients</h3>
+        <p class="pizza-text">You'll need cheese, sauce, and a tortilla. What better way to frustrate Italians!</p>
 
-    <ul>
-        <li>Tortilla</li>
-        <li>Oil</li>
-        <li>Tomato sauce</li>
-        <li>Toppings</li>
-        <li>Cheese</li>
-    </ul>
+            <h3>Ingredients</h3>
 
-    <h3>Steps</h3>
+            <ul class="pizza-text">
+                <li>Tortilla</li>
+                <li>Oil</li>
+                <li>Tomato sauce</li>
+                <li>Toppings</li>
+                <li>Cheese</li>
+            </ul> 
 
-    <ol>
-        <li>Brush the tortilla with olive oil, season, and bake.</li> 
-        <li>Top with tomato sauce and toppings. Sprinkle it with cheese.</li>
-        <li>Bake again until the cheese is melted, then season it with oregano.</li>
-    </ol>
+            <h3>Steps</h3>
+
+            <ol class="pizza-text">
+                <li>Brush the tortilla with olive oil, season, and bake.</li> 
+                <li>Top with tomato sauce and toppings. Sprinkle it with cheese.</li>
+                <li>Bake again until the cheese is melted, then season it with oregano.</li>
+            </ol>
+    </div>
 
 </body>
 </html>
