--- a/index.html
+++ b/index.html
@@ -7,12 +7,18 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-
-    <ul>
-        <li id="pizza"><a href="recipes/pizza.html">Pizza</a></li>
-        <li id="sticks"><a href="recipes/mozzarella-sticks.html">Mozzarella sticks</a></li>
-        <li id="burger"><a href="recipes/cheesy-taco-burgers.html">Cheesy taco burgers</a></li>
-    </ul>
+    <div class="block">
+        <div class="title">
+            <h1 class="title">Odin Recipes</h1>
+        </div>
+   
+        <div class="listy">
+            <ul>
+            <li id="pizza"><a href="recipes/pizza.html">Pizza</a></li>
+            <li id="sticks"><a href="recipes/mozzarella-sticks.html">Mozzarella sticks</a></li>
+            <li id="burger"><a href="recipes/cheesy-taco-burgers.html">Cheesy taco burgers</a></li>
+            </ul>
+        </div>
+    </div> 
 </body>
 </html>
