--- a/recipes/cheesy-taco-burgers.html
+++ b/recipes/cheesy-taco-burgers.html
@@ -7,30 +7,33 @@
     <link rel="stylesheet" href="../style.css">
 </head>
 <body>
-    <h1 id="burger">Cheesy taco burgers</h1>
+    <div class="recipe-block">
+    <div class="burger-font">    
+        <div class="burger-title"><h1 id="burger">Cheesy taco burgers</h1></div>
 
-    <img src="https://www.allrecipes.com/thmb/WkO1yOuYS9AG5HpIG_iY1U4AubE=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/7913764-302e7457f8ef473da0cf63eeaaa7d07a.jpg">
-    <h2>A Wonka-like creation</h2>
+        <img src="https://www.allrecipes.com/thmb/WkO1yOuYS9AG5HpIG_iY1U4AubE=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/7913764-302e7457f8ef473da0cf63eeaaa7d07a.jpg">
+        <h2>A Wonka-like creation</h2>
 
-    <p>Taco night meats the drive-thru!</p>
+        <p>Taco night meats the drive-thru!</p>
 
-    <h3>Ingredients</h3>
+        <h3>Ingredients</h3>
 
-    <ul>
-        <li>1 pound ground beef</li>
-        <li>1 (1 ounce) package taco seasoning</li>
-        <li>3 thick slices Cheddar cheese</li>
-        <li>3 hamburger buns, split</li>
-    </ul>
+        <ul>
+            <li>1 pound ground beef</li>
+            <li>1 (1 ounce) package taco seasoning</li>
+            <li>3 thick slices Cheddar cheese</li>
+            <li>3 hamburger buns, split</li>
+        </ul>
 
-    <h3>Steps</h3>
+        <h3>Steps</h3>
 
-    <ol>
-        <li>Mix ground beef and taco seasoning together in a bowl. Set in the refrigerator for 30 minutes to let taco mix infuse into the beef.</li>
-        <li>Preheat an outdoor grill for medium heat and lightly oil the grate.</li>
-        <li>Remove meat from the refrigerator and make 6 very thin patties. Place a slice of Cheddar cheese into the center of 3 patties. Place the remaining patties on top of the cheese patties and seal together by pinching the ends.</li>
-        <li>Cook on the preheated grill for 6 to 7 minutes. Flip and continue cooking until no longer pink, 6 to 7 minutes more. Place on hamburger buns.</li>
-    </ol>
-    
+        <ol>
+            <li>Mix ground beef and taco seasoning together in a bowl. Set in the refrigerator for 30 minutes to let taco mix infuse into the beef.</li>
+            <li>Preheat an outdoor grill for medium heat and lightly oil the grate.</li>
+            <li>Remove meat from the refrigerator and make 6 very thin patties. Place a slice of Cheddar cheese into the center of 3 patties. Place the remaining patties on top of the cheese patties and seal together by pinching the ends.</li>
+            <li>Cook on the preheated grill for 6 to 7 minutes. Flip and continue cooking until no longer pink, 6 to 7 minutes more. Place on hamburger buns.</li>
+        </ol>
+    </div>    
+    </div>
 </body>
 </html>
