--- a/recipes/mozzarella-sticks.html
+++ b/recipes/mozzarella-sticks.html
@@ -7,34 +7,38 @@
     <link rel="stylesheet" href="../style.css">
 </head>
 <body>
-    <h1 id="sticks">Mozzarella sticks</h1>
+    <div class="recipe-block">
+    <div class="sticks-font">  
 
-    <img src="https://www.allrecipes.com/thmb/ZiFhHliWVbS_T9hhw-Fc3GLJVNU=/0x512/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/23596-fried-mozzarella-cheese-sticks-DDMFS-4x3-842a0eaebf6b435a8d3a8b04325e13eb.jpg">
-    <h2>Golden fingers of God</h2>
+        <div class="sticks-title"><h1 id="sticks">Mozzarella sticks</h1></div>
 
-    <p>Come correct: bring cheese, bread crumbs, and oil!</p>
+        <img src="https://www.allrecipes.com/thmb/ZiFhHliWVbS_T9hhw-Fc3GLJVNU=/0x512/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/23596-fried-mozzarella-cheese-sticks-DDMFS-4x3-842a0eaebf6b435a8d3a8b04325e13eb.jpg">
+        <h2>Golden fingers of God</h2>
 
-    <h3>Ingredients</h3>
+        <p>Come correct: bring cheese, bread crumbs, and oil!</p>
 
-    <ul>
-        <li>2 large eggs, beaten</li>
-        <li>¼ cup water</li>
-        <li>½ teaspoon garlic salt</li>
-        <li>⅔ cup all-purpose flour</li>
-        <li>⅓ cup cornstarch</li>
-        <li>2 cups oil</li>
-        <li>1 package mozzarella cheese sticks</li>
-    </ul>
+        <h3>Ingredients</h3>
 
-    <h3>Steps</h3>
+        <ul>
+            <li>2 large eggs, beaten</li>
+            <li>¼ cup water</li>
+            <li>½ teaspoon garlic salt</li>
+            <li>⅔ cup all-purpose flour</li>
+            <li>⅓ cup cornstarch</li>
+            <li>2 cups oil</li>
+            <li>1 package mozzarella cheese sticks</li>
+        </ul>
 
-    <ol>
-        <li>Whisk water and eggs together in a bowl. Mix bread crumbs and garlic salt in seperate bowl.</li>
-        <li>Blend flour and cornstarch together in a third bowl.</li>
-        <li>Heat oil to 365 degrees F (185 degrees C) in a large, heavy saucepan.</li>
-        <li>Dredge a mozzarella stick in flour. Press into bread crumbs to coat. Place breaded mozzarella stick on a plate or wire rack</li>
-        <li>Use a spider spoon or a pair of tongs to lower 3 to 4 mozzarella sticks into the hot oil. Fry until golden brown, about 30 seconds</li>
-    </ol>
-    
+        <h3>Steps</h3>
+
+        <ol>
+            <li>Whisk water and eggs together in a bowl. Mix bread crumbs and garlic salt in seperate bowl.</li>
+            <li>Blend flour and cornstarch together in a third bowl.</li>
+            <li>Heat oil to 365 degrees F (185 degrees C) in a large, heavy saucepan.</li>
+            <li>Dredge a mozzarella stick in flour. Press into bread crumbs to coat. Place breaded mozzarella stick on a plate or wire rack</li>
+            <li>Use a spider spoon or a pair of tongs to lower 3 to 4 mozzarella sticks into the hot oil. Fry until golden brown, about 30 seconds</li>
+        </ol>
+    </div>    
+    </div>
 </body>
 </html>
